# search-highlight-wasm

./: Cargo.toml  LICENSE  README.md  build-web.sh  build.sh  package.json  package.tmp.json  package.tmp.web.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
.github/workflows/: build.yaml  publish.yaml
crates/getrandom/: Cargo.toml
crates/getrandom/src/: error.rs  error_impls.rs  lib.rs
src/: lib.rs
tests/: simple-sample.test.ts
