[package]
name = "getrandom"
version = "0.2.16"
edition.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
[features]
alloc = []
std = []
js = []